modified the dashboard page